welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:7: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
		if(getCouleurSol() == Color.pink && Color.orange) {
                                                          ^